--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -11,7 +11,32 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= form.label :物件名 %>
+    <%= form.text_field :property_name %>
+  </div>
+
+  <div class="field">
+    <%= form.label :賃料 %>
+    <%= form.number_field :rent %>
+  </div>
+
+  <div class="field">
+    <%= form.label :住所 %>
+    <%= form.text_field :address %>
+  </div>
+
+  <div class="field">
+    <%= form.label :築年数 %>
+    <%= form.number_field :age %>
+  </div>
+
+  <div class="field">
+    <%= form.label :備考 %>
+    <%= form.text_area :note %>
+  </div>
+
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit '登録する'%>
   </div>
 <% end %>
