--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -25,5 +25,25 @@
   <%= @property.note %>
 </p>
 
-<%= link_to '編集', edit_property_path(@property) %> |
+<div class="border"></div>
+<% i = 1 %>
+<% if @property.nearest_stations.present? %>
+<% @property.nearest_stations.each do |nearest_station| %>
+  <h3>最寄り駅<%=i %></h3>
+  <% i += 1 %>
+<p>
+  <strong>路線名:</strong>
+  <%= nearest_station.route %>
+</p>
+<p>
+  <strong>駅名:</strong>
+  <%= nearest_station.station %>
+</p>
+<p>
+  <strong>徒歩分数:</strong>
+  <%= nearest_station.minutes_walk %>
+</p>
+<% end %>
+<% end %>
+<%= link_to '編集', edit_property_path(@property) %>
 <%= link_to '戻る', properties_path %>
